--- a/app/src/components/Answers/Packages.css
+++ b/app/src/components/Answers/Packages.css
@@ -6,6 +6,7 @@
     align-items: center;
     width: 80%;
     flex-wrap: wrap;
+    gap: 20px;
 }
 
 .report-item {
@@ -53,8 +54,6 @@
 
 #master-report {
     padding: 95px 20px;
-    background: rgb(92,24,191);
-    background: linear-gradient(90deg, rgba(92,24,191,1) 0%, rgba(98,32,193,1) 7%, rgba(172,140,219,1) 100%, rgba(250,249,246,1) 100%);
     color: white;
     z-index: 1000;
 }
@@ -89,7 +88,6 @@
     font-size: 17.5px;
     font-weight: bold;
     text-decoration: none;
-    color: #ac8cdb;
     /* box-shadow: 5px 1px 10px #b9b3b3;  */
     cursor: pointer;
     /* align-self: center; */
@@ -116,7 +114,7 @@
     align-items: center;
     width: 50%;
     gap: 20px;
-    margin: 2%;
+    margin: 2% 0%;
     text-align: center;
 }
 
@@ -126,8 +124,6 @@
 
 .middle-section {
     margin: 2%;
-    background: rgb(92,24,191);
-    background: linear-gradient(90deg, rgba(92,24,191,1) 0%, rgba(172,140,219,1) 100%, rgba(250,249,246,1) 100%);
     color: white;
     width: 100%;
     display: flex;
@@ -167,6 +163,7 @@
 
     .pre-reports {
         width: 80%;
+        margin: 4%;
     }
     .middle-section {
         margin: 5%;
