--- a/app/src/components/Second/Second.css
+++ b/app/src/components/Second/Second.css
@@ -23,7 +23,7 @@
     text-align: center;
     gap: 20px;
     /* color: red; */
-    /* width: 100%; */
+    height: 100%;
 }
 
 .second-div-item h2 {
