--- a/app/src/components/FullQuiz/FullQuiz.css
+++ b/app/src/components/FullQuiz/FullQuiz.css
@@ -27,17 +27,14 @@
     text-align: center;
     background-color: white;
     z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
     gap: 30px;
     box-shadow: 1px 3px 8px 0.15px #c9b9b9;
     border-radius: 25px;
     width: 60%;
-    height: 25%;
+    /* min-height: fit-content; */
     position: relative;
-    padding: 50px 20px;
+    /* padding: 50px 20px; */
     animation: questions-div-animation 2.5s;
 }
 
@@ -120,7 +117,7 @@ svg {
         width: 90%;
         margin-top: 15%;
         /* height: 25%; */
-        padding: 25px 105px;
+        /* padding: 25px 105px; */
     }   
     .left-icon {
         top: 2%;
